--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "homepage": "https://your-username.github.io/quiz-app",
+  "homepage": ".",
+
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
